# langchain-demo

./: .env  demo01.ipynb  pyproject.toml
01-helloworld/: StandardDesc.py  langchain1.0.py
02-ollama/: Langchain_ollama.py
03-prompt/chat_prompt_template/: ChatPromptTmplate_Constructor.py  ChatPromptTmplate_ExplicitPlaceholder.py  ChatPromptTmplate_ImplicitPlaceholder.py
03-prompt/invoke/: LLM_abatch.py  LLM_ainvoke.py  LLM_astream.py  LLM_batch.py  LLM_invoke.py
03-prompt/load_external/: PromptLoadDemo01.py  PromptLoadDemo02.py  prompt.json  prompt.yml
03-prompt/prompt_templates/: PromptTemplate_Constructor.py  PromptTemplate_InvokeMethod.py  PromptTemplate_PartialMethod.py  PromptTemplate_PartialVariables.py
04-parser/: JsonOutputParserDemo.py  JsonOutputParserDemo01.py  JsonOutputParserDemo02.py
05-lcel/: LCEL_RunnableBranchDemo.py  LCEL_RunnableLambdaDemo.py  LCEL_RunnableParallelDemo.py  LCEL_RunnableSequenceDemo.py  LCEL_RunnableSerializableDemo.py
06-memory/: RedisChatMessageHistory.py  RedisCheckEnv.py
07-tool/: LLMQueryWeatherDemo.py  QueryWeatherTool.py  ToolDemo01.py
08-embedding/: Embedding_DashScope.py  Embedding_DashScopeHello.py  Embedding_DashScopePro.py  Embedding_OpenAIHello.py
09-rag/: EmbeddingRagLLM.py  EmbeddingRagLLM1.py  RedisVectorStor.py  RedisVectorStore_SimilaritySearch.py
09-rag/docloads/: RagLoadCSV.py  RagLoadDoc.py  RagLoadJson.py  RagLoadMarkdown.py  RagLoadPDF.py  RagLoadTxt.py
09-rag/resource/: java开发手册.docx
09-rag/textsplit/: RecursiveTextSplitter.py  RecursiveTextSplitter1.py
helloworld/: langchain1.0.py
(+4 files in other folders)
