[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyterlab>=4.5.8",
    "langchain>=1.3.4",
    "langchain-core>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "notebook>=7.5.7",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "panda>=0.3.1",
    "pip>=26.1.2",
    "requests>=2.34.2",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
