[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.21",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastmcp>=3.4.2",
    "httpstatuscodes>=1.0.1",
    "jq>=1.11.0",
    "jupyterlab>=4.5.8",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-redis>=0.2.5",
    "langchain-text-splitters>=1.1.2",
    "loguru>=0.7.3",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "panda>=0.3.1",
    "pip>=26.1.2",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "redis==5.3.1",
    "redisvl>=0.20.1",
    "requests>=2.34.2",
    "unstructured>=0.23.1",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
